Fix scrollbar so it's not partially hidden under the menu

--- a/css/custom.css
+++ b/css/custom.css
@@ -775,7 +775,7 @@ section {
 /* ================ */
 .project-stage {
 	position: fixed;
-	top: 0;
+	top: 45px;
 	left: 0;
 	right: 0;
 	bottom: 0;
